Fixed broken vertical-align on navigation-bar center items.

--- a/components-src/stylus/components/navigation-bar.styl
+++ b/components-src/stylus/components/navigation-bar.styl
@@ -96,6 +96,7 @@ navigation-bar__item()
   @extend .navigation-bar__item
   min-width 50%
   text-align center
+  line-height 44px
 
 .navigation-bar__center:first-child:last-child
   width 100%
